--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,9 @@
   "regions": ["iad1"],
   "env": {
     "NEXT_PUBLIC_API_URL": "WILL_BE_SET_BY_VERCEL",
-    "NEXT_PUBLIC_APP_URL": "WILL_BE_SET_BY_VERCEL"
+    "NEXT_PUBLIC_APP_URL": "WILL_BE_SET_BY_VERCEL",
+    "RESEND_API_KEY": "WILL_BE_SET_BY_VERCEL",
+    "ADMIN_EMAIL": "WILL_BE_SET_BY_VERCEL"
   },
   "headers": [
     {
