--- a/backend/package.json
+++ b/backend/package.json
@@ -12,18 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@radix-ui/react-icons": "^1.3.2",
     "airtable": "^0.12.2",
     "body-parser": "^1.20.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
-    "lucide-react": "^0.469.0",
-    "path": "^0.12.7",
-    "tailwind-merge": "^2.6.0"
+    "path": "^0.12.7"
   }
 }
