update vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,11 @@
     "NEXT_PUBLIC_API_URL": "WILL_BE_SET_BY_VERCEL",
     "NEXT_PUBLIC_APP_URL": "WILL_BE_SET_BY_VERCEL",
     "RESEND_API_KEY": "WILL_BE_SET_BY_VERCEL",
-    "ADMIN_EMAIL": "WILL_BE_SET_BY_VERCEL"
+    "ADMIN_EMAIL": "WILL_BE_SET_BY_VERCEL",
+    "AIRTABLE_API_KEY": "WILL_BE_SET_BY_VERCEL",
+    "AIRTABLE_BASE_ID": "WILL_BE_SET_BY_VERCEL",
+    "NEXT_PUBLIC_SITE_URL": "WILL_BE_SET_BY_VERCEL",
+    "NODE_ENV": "production"
   },
   "headers": [
     {
