--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -28,9 +29,6 @@ yarn-error.log*
 .env*.local
 .env
 .env.production
-
-# vercel
-.vercel
 
 # typescript
 *.tsbuildinfo
