--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "airtable": "^0.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^0.2.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.469.0",
     "next": "^14.2.22",
