--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "@radix-ui/react-use-escape-keydown": "1.0.0",
     "@radix-ui/react-use-layout-effect": "1.0.0",
     "@tanstack/react-query": "^5.62.16",
+    "@types/axios": "^0.14.4",
     "airtable": "^0.12.2",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "0.2.1",
