--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,19 @@
-# Airtable
+# Environment Variables
+NODE_ENV=development
+
+# API URLs
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
+
+# Airtable Configuration
 AIRTABLE_API_KEY=your_airtable_api_key
 AIRTABLE_BASE_ID=your_airtable_base_id
 
-# Resend Email
-RESEND_API_KEY=your_resend_api_key
+# Site Password (for customer access)
+NEXT_PUBLIC_SITE_PASSWORD=2025
 
-# Next.js
-NEXT_PUBLIC_API_URL=http://localhost:3000/api
+# Admin Password (defaults to 'Richmadeit' if not set)
+ADMIN_PASSWORD=Richmadeit
+
+# Email Configuration
+RESEND_API_KEY=your_resend_api_key
+ADMIN_EMAIL=your_admin_email
