--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.16.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.294.0",
     "next": "^14.2.23",
     "next-themes": "^0.2.1",
@@ -52,6 +54,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
     "resend": "^2.0.0",
     "sonner": "^1.2.4",
